synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: r16a-chat
spec:
  selector:
    app: synapse
  ports:
    - port: 8008
      targetPort: 8008
