synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: r16a-chat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - chat.r16a.cloud
      secretName: synapse-tls
  rules:
    - host: chat.r16a.cloud
      http:
        paths:
          - path: /_matrix
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
          - path: /_synapse/client
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
